--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <!-- Game grid will be displayed here -->
+        <div class="grid-container">
+            <!-- Game grid will be dynamically generated here -->
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
